# rust_2023_homework

./: .deadlines.yml  .gitignore  Cargo.toml  README.md
docs/: reading-list.md  setup.md  solving.md  syllabus.md
lectures/: README.md
lectures/lecture-00/: main.tex
lectures/lecture-01/: main.tex
lectures/lecture-02/: main.tex
lectures/lecture-03/: main.tex
lectures/lecture-04/: main.tex
lectures/lecture-04/code/: lib.rs
lectures/lecture-06/: main.tex
lectures/lecture-07/: main.tex
lectures/lecture-08/: main.tex
lectures/lecture-08/code/src/: test.rs  two.rs
lectures/lecture-09/code/: lib.rs
problems/traits/flatmap/src/: lib.rs
problems/tutorial/add/: README.md
