[workspace]
members = [
    # Problems
    "problems/tutorial/add",
    "problems/intro/combinations",
    "problems/intro/conway",
    "problems/intro/min-queue",
    "problems/std-collections/comm",
    "problems/std-collections/prefix",
    "problems/std-collections/lru-cache",
    "problems/traits/trust",
    "problems/traits/mpsc",
    "problems/traits/flatmap",
    "problems/traits/itertools",

]
    